--- a/html/otherTab.html
+++ b/html/otherTab.html
@@ -13,7 +13,7 @@
                 <title>Hack for Humanity</title>
                 <h1><a style="text-decoration:none" href= "../index.html">Other Tab</a></h1>
                 <hr>
-                <!-- Navigation bar with bio, contact, projects, and resume -->
+                <!-- Navigation bar -->
                 <ul class="navigationBar">
                         <li><a style="text-decoration:none" href= "about.html">About</a></li>
                         <li><a style="text-decoration:none" href="otherTab.html">Resources</a></li>
