--- a/html/guidelines.html
+++ b/html/guidelines.html
@@ -10,15 +10,28 @@
 	</head>
 	<body>
 		<!-- Title bar showing name -->
-		<title>Hack for Humanity</title>
+		<title>Hack For Humanity</title>
 		<h1><a style="text-decoration:none" href= "../index.html">Hack for Humanity</a></h1>
 		<hr>
 		<!-- Navigation bar -->
 		<ul class="navigationBar">
-			<li><a style="text-decoration:none" href= "about.html">About</a></li>
-			<li><a style="text-decoration:none" href="otherTab.html">Resources</a></li>
+			<li><a style="text-decoration:none" href= "guidelines.html">Guidelines</a></li>
+			<li><a style="text-decoration:none" href="resources.html">Resources</a></li>
 			<li><a style="text-decoration:none" href="jobSearch.html">Job Search</a></li>
 		</ul>
 		<hr>
+
+		<h1>
+				Hello!
+		</h1>
+
+		<h1>
+			Next hello!
+		</h1>
+
+		<h1>
+			hello
+		</h1>
+
 </body>
 </html>
