--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
-@author: Madeleine Waldie
-@version: November 17, 2018
+@author:
+@version:
 -->
 
 <!DOCTYPE html>
@@ -13,10 +13,20 @@
         <h1><a style="text-decoration:none" href= "index.html">Hack for Humanity</a></h1>
         <hr>
 		<ul class="navigationBar">
-			<li><a style="text-decoration:none" href= "html/about.html">About</a></li>
-			<li><a style="text-decoration:none" href="html/contactInfo.html">Resources</a></li>
-			<li><a style="text-decoration:none" href="html/projects.html">Other Tab</a></li>
+			<li><a style="text-decoration:none" href= "html/guidelines.html">Guidelines</a></li>
+			<li><a style="text-decoration:none" href="html/resources.html">Resources</a></li>
+			<li><a style="text-decoration:none" href="html/jobSearch.html">Job Search</a></li>
         </ul>
         <hr>
+
+		<h1>
+			Welcome!
+		</h1>
+		<p>
+			Getting identification after prison shouldn't be hard. We're here to help
+			you navigate the entire process in all 50 states from beginning to end. Please
+			view the "Guidelines" page
+		</p>
+
 	</body>
 </html>
