Updated resources page

--- a/html/guidelines.html
+++ b/html/guidelines.html
@@ -15,6 +15,7 @@
 		<hr>
 		<!-- Navigation bar -->
 		<ul class="navigationBar">
+			<li><a style="text-decoration:none" href= "../index.html">Home</a></li>
 			<li><a style="text-decoration:none" href= "guidelines.html">Guidelines</a></li>
 			<li><a style="text-decoration:none" href="resources.html">Resources</a></li>
 			<li><a style="text-decoration:none" href="jobSearch.html">Job Search</a></li>
@@ -32,6 +33,10 @@
 		<h1>
 			hello
 		</h1>
+
+    <input type="checkbox" >Cats<br>
+    <input type="checkbox" >Dogs<br>
+    <input type="checkbox" >Birds<br>
 
 </body>
 </html>
