--- a/html/resources.html
+++ b/html/resources.html
@@ -13,12 +13,82 @@
 		<title>Hack for Humanity</title>
 		<h1><a style="text-decoration:none" href= "../index.html">Hack for Humanity</a></h1>
 		<hr>
+
 		<!-- Navigation bar -->
 		<ul class="navigationBar">
-			<li><a style="text-decoration:none" href= "about.html">About</a></li>
-			<li><a style="text-decoration:none" href="otherTab.html">Resources</a></li>
+			<li><a style="text-decoration:none" href= "../index.html">Home</a></li>
+			<li><a style="text-decoration:none" href= "guidelines.html">Guidelines</a></li>
+			<li><a style="text-decoration:none" href="resources.html">Resources</a></li>
 			<li><a style="text-decoration:none" href="jobSearch.html">Job Search</a></li>
 		</ul>
 		<hr>
+
+		<h2>Overview</h2>
+
+		<p>Below, you can see a checklist of the steps required to obtain reentry IDs:</p>
+
+		<input type="checkbox" >Retrieving Your Birth Certificate<br>
+		<input type="checkbox" >Obtaining Your Cal-ID or Driver's License<br>
+		<input type="checkbox" >Obtaining Your Social Security Card<br>
+
+		<!-- Step 1 -->
+		<h2>Step 1: Retrieving Your Birth Certificate</h2>
+
+		<h3>Option 1: Asking a family member for help</h3>
+
+		<p>
+			Birth Certificates can be obtained in person in the county you were born in, or remotely by mail / on the Internet.
+			In order to retrieve your birth certificate, you must show a photo ID.
+			Because of this, it cam be easier to have a close family member get your birth certificate, as they ecause family member can use their own ID to get it on your behalf.
+		</p>
+
+		<p>Examples of close family members include:</p>
+
+		<ul>
+		<li>Parents</li>
+		<li>Legal Guardians</li>
+		<li>Children</li>
+		<li>Grandparents</li>
+		<li>Grandchildren</li>
+		<li>Siblings</li>
+		<li>Spouses</li>
+		<li>Domestic Partners</li>
+		</ul>
+
+		<p>
+			If you have any of these family members, we STRONGLY recommend asking them to help you obtain your birth certificate.
+		</p>
+
+		<h3>Option 2: Retrieving the Certificate Yourself</h3>
+
+		<p>
+			There are two routes you can take when retrieving your birth certificate on your own: 1) going in person, or 2) filling out a form.
+		</p>
+
+		<h4>In Person</h4>
+
+		
+
+		<p>
+			If they must get documents by themselves, then the person will need to find a notary who will verify their
+			identity with the ID they have on hand, such as CDCR (prison or parole ID) ID, public benefits cards, or
+			witnesses confirming their identity.
+
+			Tip: If a person does not have local contacts to confirm identity, the person can ask parole or probation officer
+			(and their supervisor or other colleague, if they need a second person) to confirm their identity
+
+		</p>
+
+		<h2>Step 2: Obtaining Your Cal-ID or Driver's License</h2>
+
+		<h2>Step 3: Obtaining Your Social Security Card</h2>
+
+		<p>
+
+
+
+		</p>
+
+
 </body>
 </html>
