--- a/index.html
+++ b/index.html
@@ -13,20 +13,28 @@
         <h1><a style="text-decoration:none" href= "index.html">Hack for Humanity</a></h1>
         <hr>
 		<ul class="navigationBar">
+			<li><a style="text-decoration:none" href= "index.html">Home</a></li>
 			<li><a style="text-decoration:none" href= "html/guidelines.html">Guidelines</a></li>
 			<li><a style="text-decoration:none" href="html/resources.html">Resources</a></li>
 			<li><a style="text-decoration:none" href="html/jobSearch.html">Job Search</a></li>
         </ul>
         <hr>
 
-		<h1>
+		<h2>
 			Welcome!
-		</h1>
+		</h2>
+
 		<p>
 			Getting identification after prison shouldn't be hard. We're here to help
-			you navigate the entire process in all 50 states from beginning to end. Please
-			view the "Guidelines" page
+			you navigate the entire process in all counties in California. Please
+			view the "Guidelines" page for more information!
+
+			<br><br>
+
+			In addition, check out our Job Search tab, which provides resources to make your job search easier!
 		</p>
+
+
 
 	</body>
 </html>
