updated code w/ maps

--- a/html/guidelines.html
+++ b/html/guidelines.html
@@ -38,5 +38,8 @@
     <input type="checkbox" >Dogs<br>
     <input type="checkbox" >Birds<br>
 
+		<!-- DMV Locations -->
+		<iframe src="https://www.google.com/maps/d/embed?mid=1Mr74hecbSiZ0LRXFr_ngVsgLHtw" width="640" height="480"></iframe>
+
 </body>
 </html>
