--- a/html/resources.html
+++ b/html/resources.html
@@ -67,7 +67,9 @@
 
 		<h4>In Person</h4>
 
-		
+		<p>
+
+
 
 		<p>
 			If they must get documents by themselves, then the person will need to find a notary who will verify their
@@ -80,6 +82,12 @@
 		</p>
 
 		<h2>Step 2: Obtaining Your Cal-ID or Driver's License</h2>
+
+		<p>
+
+			Before you try to obtain your Cal-ID or driver's liscense, you should first check whether or not you can renew online. 
+
+		</p>
 
 		<h2>Step 3: Obtaining Your Social Security Card</h2>
 
