added map3, worked on readme, updated search & resources, updated header

--- a/html/guidelines.html
+++ b/html/guidelines.html
@@ -17,7 +17,7 @@
 		<ul class="navigationBar">
 			<li><a style="text-decoration:none" href= "../index.html">Home</a></li>
 			<li><a style="text-decoration:none" href= "guidelines.html">Guidelines</a></li>
-			<li><a style="text-decoration:none" href="resources.html">Resources</a></li>
+			<li><a style="text-decoration:none" href="resources.html">ID Resources</a></li>
 			<li><a style="text-decoration:none" href="jobSearch.html">Job Search</a></li>
 		</ul>
 		<hr>
