--- a/html/map2.html
+++ b/html/map2.html
@@ -44,14 +44,17 @@
       ['Fresno Social Security Administration Office Locust Ave: 640 W Locust Avenue Fresno, CA - 93650. (866)-931-9041', 36.8401662,-119.8049253, 1],
       ['Fresno Social Security Administration Office: 5140 E Olive Ave Fresno, CA - 93727. (866)-366-4918', 36.8401662,-119.8049253, 1],
       ['Fresno Social Security Administration Office Fulton Mall: 865 Fulton Mall Fresno, CA - 93721. (877)-311-2640', 36.7355297,-119.7915206, 1],
-      ['', 33.79007,-117.967348, 1],
-      ['', , , 1],
-      ['', , , 1],
-      ['', , , 1],
-      ['', , , 1],
-      ['', , , 1],
-      ['', , , 1],
-      ['', , , 1],
+      ['Garden Grove Social Security Administration Office: 11900 Gilbert St Garden Grove, CA - 92841. (800)-772-1213', 33.79007,-117.967348, 1],
+      ['Gilroy Social Security Administration Office: 1059 First Street Gilroy, CA - 95020. (877)-452-4198', 37.0135377,-121.5908993, 1],
+      ['Glendale Social Security Administration Office: 225 W. Broadway Glendale, CA - 91204. (800)-772-1213', 34.1471249,-118.2573396, 1],
+      ['Glendora Social Security Administration Office: 1165 E Route 66 Glendora, CA - 91740. (866)-964-6045', 34.1289468,-117.8448912, 1],
+      ['Hanford Social Security Administration Office: 330 North Harris St, suite 101 Hanford, CA - 93230. (855)-207-4866', 36.328152,-119.6444699, 1],
+      ['Hayward Social Security Administration Office: 24301 Southland Dr Hayward, CA - 94545. (866)-964-5054', 36.328152,-119.6444699, 1],
+      ['Hemet Social Security Administration Office: 3095 W Devonshire Ave Hemet, CA - 92545. (800)-772-1213', 33.7510877,-117.0040733, 1],
+      ['Hollywood Social Security Administration Office: 1122 N Vine St Hollywood, CA - 90038. (800)-772-1213', 34.091346,-118.3265272, 1],
+      ['Huntington Park Social Security Administration Office: 6303 Rugby Avenue Huntington Park, CA - 90255. (866)-931-9941', 33.9833741,-118.226599, 1],
+      ['Indio Social Security Administration Office: 46845 Monroe Street Indio, CA - 92201. (800)-772-1213', 33.707944,-116.233936, 1],
+      ['Inglewood Social Security Administration Office: 230 East Spruce Avenue Inglewood, CA - 90301. (866)-331-7694', 33.9573527,-118.3514284, 1],
 
       <!-- Kamya -->
       ['La Mesa Social Security Administration Office: 7961 University Ave La Mesa, CA - 91942. 800-772-1213',32.764360,-117.026460,1],
@@ -70,19 +73,39 @@
       ['Manteca Social Security Administration Office 510 Commerce Ct Manteca, CA - 95336 (866) 320-2587',36.104695,-86.132857,1],
       ['Merced Social Security Administration Office 600 West Olive Ave Merced, CA - 95348 888-632-7069', 37.3188735,-120.4789326,1],
       ['Mission Viejo Social Security Administration Office 26051 Acero Road Mission Viejo, CA - 92691 800-772-1213 ',33.6187576,-117.6765852,1],
-      ['']
-      ['', , , 1],
-      ['', , , 1],
-      ['', , , 1],
-      ['', , , 1],
-
+      ['Modesto Social Security Administration Office 1521 N Carpenter Rd, Suite E1 Modesto, CA - 95351 888-748-7698',37.654056549072266,-121.03099060058594,1]
+      ['Montebello Social Security Administration Office 2216 W Beverly Blvd Montebello, CA - 90640866-964-7435', 34.0181677,-118.1106422,1],
+      ['Moreno Valley Social Security Administration Office 22815 CALLE SAN JUAN De Los Lagos Moreno Valley, CA - 92553 800-772-1213', 33.91442108154297,-117.2637939453125 , 1],
+      ['Napa Social Security Administration Office 1850 Soscol Ave, suite 102 Napa, CA - 94559 877-836-1559', 33.91442108154297,-117.2637939453125 , 1],
+      ['National City Social Security Administration Office - Closed 2530 E Plaza Boulevard National City, CA - 91950800-772-1213',32.6799345,-117.0797484,1]
+      ['Needles Social Security Administration Office 1502 Bailey Avenue Needles, CA - 92363 866-596-7946', 34.8308444,-114.6183858, 1],
+      ['Norwalk Social Security Administration Office 12440 E Imperial Hwy, suite 170 Norwalk, CA - 90650 800-772-1213', 33.917028,-118.1118519 , 1],
+      ['Oakland Social Security Administration Office Eastmont Town Center 7200 Bancroft Avenue Oakland, CA - 94605 888-527-9329', 37.7526376,-122.1651429 , 1],
+      ['Oakland Social Security Administration Office 360 22ND ST, suite 400 Oakland, CA - 94607 800-772-1213', 37.810707092285156,-122.26575469970703 , 1],
+      ['Oceanside Social Security Administration Office 2160 S El Camino Real Oceanside, CA - 92054 855-287-4793', 33.188045501708984,-117.32823181152344 , 1],
+      ['Ontario Social Security Administration Office 1100 E Holt Blvd Ontario, CA - 91761 866-331-2216', 34.06343078613281,-117.62395477294922 , 1],
+      ['Oroville Social Security Administration Office 115 Table Mountain Bl Oroville, CA - 95965 (866) 331-7130', 39.522346,-121.556005 , 1],
+      ['Oxnard Social Security Administration Office 2000 Outlet Center Dr, Suite 250 Oxnard, CA - 93036 866-931-8352',34.220130920410156,-119.1485824584961 , 1],
+      ['Palm Springs Social Security Administration Office: 4201 E Ramon Rd Palm Springs, CA - 92264. 877-873-9105', 33.815590, -116.501060, 1],
+      ['Panorama City Social Security Administration Office 14500 Roscoe Blvd, suite 207 Panorama City, CA - 91402 866-341-0785',  34.22144,-118.448919, 1],
+      ['Pasadena Social Security Administration Office 104 N Mentor Avenue Pasadena, CA - 91106 877-255-1508', 34.148921966552734,-118.13087463378906 , 1],
+      ['Placerville Social Security Administration Office 3916 Missouri Flat Rd, suite A Placerville, CA - 95667877-545-5497', 38.711551666259766,-120.8398208618164 , 1],
+      ['Porterville Social Security Administration Office 890 W Morton Avenue Porterville, CA - 93257 866-388-8903', 36.07328414916992,-119.04348754882812 , 1],
+      ['Redding Social Security Administration Office 2660 Park Marina DR, suite A Redding, CA - 96002 (866) 964-1236', 40.58320617675781,-122.37320709228516 , 1],
+      ['Redwood City Social Security Administration Office 601 Allerton St, 2nd Floor Redwood City, CA - 94063 888-860-5582', 37.48890686035156,-122.23191833496094 , 1],
+      ['Richmond Social Security Administration Office 3164 Garrity Way Richmond, CA - 94806 800-772-1213', 37.978336334228516,-122.32328796386719 , 1],
+      ['Riverside Social Security Administration Office 7880 Mission Grove Parkway South Riverside, CA - 92508 800-772-1213', 33.90913009643555,-117.32487487792969 , 1],
+      ['Roseville Social Security Administration Office 910 Cirby WayRoseville, CA - 95661 (866) 348-7830', 38.72946548461914,-121.27870178222656 , 1],
         //['']
       <!-- Maddie -->
-      ['', , , 1],
-      ['', , , 1],
-      ['', , , 1],
-      ['', , , 1],
-      ['', , , 1],
+      ['Sacramento Social Security Administration Office: 2424 Arden Way Sacramento, CA - 95825. (855) 782-9153', 38.606416, -121.449651, 1],
+      ['Social Security Office Sacramento Folsom Blvd: 8581 Folsom Blvd Sacramento, CA - 95826. (800) 772-1213', 38.547977447509766, -121.38912963867188, 1],
+      ['Sacramento Social Security Office Massie Ct: 40 Massie Court Sacramento, CA - 95823. (866) 708-3208', 38.4755341, -121.4206097, 1],
+      ['San Bernardino Social Security Administration Office: 605 N Arrowhead Ave, suite 101 San Bernardino, CA - 92401. 800-772-1213', 34.11200714111328, -117.2896499633789, 1],
+      ['San Fernando Social Security Administration Office: 456 S F Mission Blvd San Fernando, CA - 91340. 800-772-1213', 37.790115, -122.397142, 1],
+      ['San Jose Social Security Administration Office Fontaine Rd: 2500 Fontaine Rd San Jose, CA - 95121. 866-931-4496', 37.3174735, -121.8294901, 1],
+      ['San Jose Social Security Administration Office - First Street: 280 S First Street San Jose, CA - 95113. (866) 331-2235', 37.33042526245117, -121.88630676269531, 1],
+      ['San Jose Social Security Administration Office: 6140 Cottle Road San Jose, CA - 95123. 888-383-1180', 37.2358746, -121.8038246, 1],
       ['San Leandro Social Security Administration Office: 320 Davis Street San Leandro, CA - 94577. 866-331-2181', 33.745614, -117.84197, 1],
       ['San Marcos Social Security Administration Office: 367 Via Vera Cruz San Marcos, CA - 92078. 866-614-4769', 33.745614, -117.84197, 1],
       ['San Mateo Social Security Administration Office: 800 South Claremont St, suite 101 San Mateo, CA - 94402. 866-726-8193', 37.5633424, -122.3177702, 1],
