--- a/html/resources.html
+++ b/html/resources.html
@@ -18,18 +18,18 @@
 		<ul class="navigationBar">
 			<li><a style="text-decoration:none" href= "../index.html">Home</a></li>
 			<li><a style="text-decoration:none" href= "guidelines.html">Guidelines</a></li>
-			<li><a style="text-decoration:none" href="resources.html">Resources</a></li>
+			<li><a style="text-decoration:none" href="resources.html"> ID Resources</a></li>
 			<li><a style="text-decoration:none" href="jobSearch.html">Job Search</a></li>
 		</ul>
 		<hr>
 
-		<h2>Overview</h2>
+		<!-- <h2>Overview</h2>
 
 		<p>Below, you can see a checklist of the steps required to obtain reentry IDs:</p>
 
 		<input type="checkbox" >Retrieving Your Birth Certificate<br>
 		<input type="checkbox" >Obtaining Your Cal-ID or Driver's License<br>
-		<input type="checkbox" >Obtaining Your Social Security Card<br>
+		<input type="checkbox" >Obtaining Your Social Security Card<br> -->
 
 		<!-- Step 1 -->
 		<h2>Step 1: Retrieving Your Birth Certificate</h2>
@@ -67,35 +67,52 @@
 
 		<h4>In Person</h4>
 
-		<p>
+		<p>If you have to get your birth certificate by yourself, you will need a notory to verify your identity with the ID
+			you have on hand, such as CDCR (prison or parole ID) ID, public benefits cards, or witnesses confirming your identity.
 
-
-
-		<p>
-			If they must get documents by themselves, then the person will need to find a notary who will verify their
-			identity with the ID they have on hand, such as CDCR (prison or parole ID) ID, public benefits cards, or
-			witnesses confirming their identity.
-
-			Tip: If a person does not have local contacts to confirm identity, the person can ask parole or probation officer
-			(and their supervisor or other colleague, if they need a second person) to confirm their identity
+			If you do not have local contacts to confirm your identity, you can ask your parole or probation officer
+			(and their supervisor or other colleague, if you need a second person) to confirm your identity.
 
 		</p>
 
-		<h2>Step 2: Obtaining Your Cal-ID or Driver's License</h2>
+		<a href="search.html" style="float: left;"><nobr> Click here to search for locations in your county to obtain your birth certificate</a><br>
 
-		<p>
+		<h2>Step 2: Obtaining Your Social Security Card</h2>
 
-			Before you try to obtain your Cal-ID or driver's liscense, you should first check whether or not you can renew online. 
-
-		</p>
-
-		<h2>Step 3: Obtaining Your Social Security Card</h2>
-
-		<p>
+		<p> If you are having trouble locating a Social Security Office, use this interactive map to find one near you!</p>
 
 
 
-		</p>
+		<h2>Step 3: Obtaining Your Cal-ID or Driver's License</h2>
+
+		<p> There are two routes you can take when obtaining your driver's license or ID card: 1) going online, or 2) going in person.
+			Below, you can find the details on whether you qualify for renewal online or if you need to go in person. </p>
+
+			<p> Note: You may NOT renew online if: </br>  1) you are not the person named on the renewal notice,
+			</br> 2) you want to change your name, address, or gender identity, or</br>  3) you want to change from a standard DL/ID to a REAL ID, Reduced Fee DL/ID, No Fee DL/ID, Senior ID, or Commercial DL </p>
+
+			<figure class="wp-block-table"><table><thead><tr><th>Category</th><th>Situation</th><th>Customer Action</th></tr></thead><tbody><tr><td data-title="Category">Drivers 70+ – non-commercial</td><td data-title="Situation">Beginning December 6, 2020, eligible to renew online or by mail for expirations March 2020 through the COVID-19 pandemic.</td><td data-title="Customer Action">Complete online renewal or renew by mail</td></tr><tr><td data-title="Category"><br>Drivers 69 and under</td><td data-title="Situation">Expanded eligibility to renew onlineor by mail for licenses expiring during the emergency.</td><td data-title="Customer Action">Submit online renewal application or renew by mail</td></tr><tr><td data-title="Category">First Time REAL ID</td><td data-title="Situation">Requires office visit.</td><td data-title="Customer Action"> Complete <a href="/portal/driver-licenses-identification-cards/dl-id-online-app-edl-44/">online application</a><br> Upload documents<br> No appointment necessary<br> Bring documents to office visit</td></tr><tr><td data-title="Category">REAL ID Renewal</td><td data-title="Situation">Can be completed online.</td><td data-title="Customer Action">No office visit required</td></tr><tr><td data-title="Category">Limited-term REAL ID renewal</td><td data-title="Situation"></td><td data-title="Customer Action">Requires an office visit</td></tr><tr><td data-title="Category">Driver’s License<br>Permits</td><td data-title="Situation">All permits expiring March 1, 2020 through May 31, 2021 are extended for six months or to a date 24 months from the date of application, whichever is earlier.</td><td data-title="Customer Action">No action necessary</td></tr><tr><td data-title="Category">Commercial License</td><td data-title="Situation">All commercial driver’s licenses, endorsements and commercial learner’s permits expiring between March 2020-February 2021 have an extension valid through February 28, 2021.</td><td data-title="Customer Action"> No action necessary</td></tr></tbody></table></figure>
+
+		<h4>Online</h4>
+
+		<p> If you are eligible to obtain your card online, use the following resources: </p>
+
+		<a href="https://www.dmv.ca.gov/wasapp/dlir/dlirApplication.do" style="float: left;">Start REAL ID Driver’s License Renewal</a><br>
+		<a href="https://www.dmv.ca.gov/wasapp/dlir/dlirApplication.do" style="float: left;">Start Driver’s License Renewal</a><br>
+		<a href="https://www.dmv.ca.gov/wasapp/dlir/idApplication.do" style="float: left;">Start ID Card Renewal</a><br>
+		<a href="https://www.dmv.ca.gov/portal/dmv-virtual-office/commercial-driver-license-renewal/" style="float: left;">Start Commercial Driver’s License Renewal</a>
+
+		<br>
+
+		<h4>In Person</h4>
+
+		<!-- DMV Locations -->
+
+		<p>If you are renewing your ID in person, you will need to make sure you have the required documents.
+			Below, you can find a list of the documents you need:</p>
+
+		<p> If you are having trouble locating a DMV, use this interactive map to find one near you!</p>
+		<iframe src="https://www.google.com/maps/d/embed?mid=1Mr74hecbSiZ0LRXFr_ngVsgLHtw" width="640" height="480"></iframe>
 
 
 </body>
