--- a/html/jobSearch.html
+++ b/html/jobSearch.html
@@ -17,11 +17,11 @@
                 <ul class="navigationBar">
                   <li><a style="text-decoration:none" href= "../index.html">Home</a></li>
                   <li><a style="text-decoration:none" href= "guidelines.html">Guidelines</a></li>
-                  <li><a style="text-decoration:none" href="resources.html">Resources</a></li>
+                  <li><a style="text-decoration:none" href="resources.html">ID Resources</a></li>
                   <li><a style="text-decoration:none" href="jobSearch.html">JobSearch</a></li>
                 </ul>
                 <hr>
         </body>
         <h2>Job Search</h2>
-        
+
 </html>
