--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<ul class="navigationBar">
 			<li><a style="text-decoration:none" href= "index.html">Home</a></li>
 			<li><a style="text-decoration:none" href= "html/guidelines.html">Guidelines</a></li>
-			<li><a style="text-decoration:none" href="html/resources.html">Resources</a></li>
+			<li><a style="text-decoration:none" href="html/resources.html">ID Resources</a></li>
 			<li><a style="text-decoration:none" href="html/jobSearch.html">Job Search</a></li>
         </ul>
         <hr>
