--- a/html/jobSearch.html
+++ b/html/jobSearch.html
@@ -16,12 +16,24 @@
                 <!-- Navigation bar -->
                 <ul class="navigationBar">
                   <li><a style="text-decoration:none" href= "../index.html">Home</a></li>
-                  <li><a style="text-decoration:none" href= "guidelines.html">Guidelines</a></li>
                   <li><a style="text-decoration:none" href="resources.html">ID Resources</a></li>
                   <li><a style="text-decoration:none" href="jobSearch.html">JobSearch</a></li>
                 </ul>
                 <hr>
         </body>
-        <h2>Job Search</h2>
+
+        <p>Use the map below to find an unemployment office near you! Below, you can also find a list of re-entry programs for California former offenders.</p>
+
+        <a href="http://jailstojobs.org/html/ca_training_benefits.html" style="float: left;">Jail to Jobs - California Training Benefits Program</a><br>
+        <a href="http://hirenetwork.org/content/california" style="float: left;">California National HIRE Network</a><br>
+        <a href="http://sandiego.networkofcare.org/veterans/services/agency.aspx?pid=CHANGEChoosingANewGenerationofExcellence_870_17_0" style="float: left;">CHANGE - Choosing A New Generation of Excellence</a><br>
+        <a href="http://www.cdcr.ca.gov/rehabilitation/female-offender-treatment-employment-program.html" style="float: left;">Female Offender Treatment and Employment Program</a><br>
+        <a href="http://pia.ca.gov/OffenderDevelopment/IEP.aspx" style="float: left;">California Prison Industry Authority - Inmate Employability Program</a><br>
+        <a href="http://www.secondchanceprogram.org/job-readiness-training/" style="float: left;">Second Chance</a><br>
+        <a href="http://www.cdcr.ca.gov/Parole/" style="float: left;">Division of Adult Parole Operations</a><br>
+        <a href="http://www.calsheriffs.org/" style="float: left;">County Sheriff Departments</a><br>
+        <a href="http://www.cdcr.ca.gov/rehabilitation/os.html" style="float: left;">California Department of Corrections and Rehabilitation - Office of Offender Services</a><br>
+        <a href="http://www.urban.org/projects/tjc/" style="float: left;">The Urban Institute - Transition from Jail to Community Initiative</a><br>
+        <a href="http://nicic.gov/jailtransition" style="float: left;">National Institute of Corrections - Transition from Jail to Community</a><br>
 
 </html>
