--- a/html/resources.html
+++ b/html/resources.html
@@ -17,7 +17,6 @@
 		<!-- Navigation bar -->
 		<ul class="navigationBar">
 			<li><a style="text-decoration:none" href= "../index.html">Home</a></li>
-			<li><a style="text-decoration:none" href= "guidelines.html">Guidelines</a></li>
 			<li><a style="text-decoration:none" href="resources.html"> ID Resources</a></li>
 			<li><a style="text-decoration:none" href="jobSearch.html">Job Search</a></li>
 		</ul>
@@ -33,6 +32,7 @@
 
 		<!-- Step 1 -->
 		<h2>Step 1: Retrieving Your Birth Certificate</h2>
+		<p style="float: left;"><img src="../images/birthcertificate.png" height="310px" width="500px" ></p>
 
 		<h3>Option 1: Asking a family member for help</h3>
 
@@ -40,20 +40,16 @@
 			Birth Certificates can be obtained in person in the county you were born in, or remotely by mail / on the Internet.
 			In order to retrieve your birth certificate, you must show a photo ID.
 			Because of this, it cam be easier to have a close family member get your birth certificate, as they ecause family member can use their own ID to get it on your behalf.
-		</p>
+			Examples of close family members include:</br></br>
 
-		<p>Examples of close family members include:</p>
-
-		<ul>
-		<li>Parents</li>
-		<li>Legal Guardians</li>
-		<li>Children</li>
-		<li>Grandparents</li>
-		<li>Grandchildren</li>
-		<li>Siblings</li>
-		<li>Spouses</li>
-		<li>Domestic Partners</li>
-		</ul>
+		• Parents</br>
+		• Legal Guardians</br>
+		• Children</br>
+		• Grandparents</br>
+		• Grandchildren</br>
+		• Siblings</br>
+		• Spouses</br>
+		• Domestic Partners</p>
 
 		<p>
 			If you have any of these family members, we STRONGLY recommend asking them to help you obtain your birth certificate.
@@ -61,19 +57,25 @@
 
 		<h3>Option 2: Retrieving the Certificate Yourself</h3>
 
-		<p>
-			There are two routes you can take when retrieving your birth certificate on your own: 1) going in person, or 2) filling out a form.
-		</p>
+		<p> You can either retrieve your birth certificate in person or by filling out a form.</p>
 
-		<h4>In Person</h4>
-
-		<p>If you have to get your birth certificate by yourself, you will need a notory to verify your identity with the ID
+	<p>If you decide to get your birth certificate in person, you will need a notory to verify your identity with the ID
 			you have on hand, such as CDCR (prison or parole ID) ID, public benefits cards, or witnesses confirming your identity.
 
 			If you do not have local contacts to confirm your identity, you can ask your parole or probation officer
 			(and their supervisor or other colleague, if you need a second person) to confirm your identity.
-
 		</p>
+
+		<p> Below, you can find the resources necessary to fill out the form to obtain your birth certificate. Each county in California has its own form to use in person,
+			whereas the state of California only has one form. This form is shown below.</p>
+
+		<a href="https://www.cdph.ca.gov/CDPH%20Document%20Library/ControlledForms/VS111.pdf" style="float: left;"><nobr> Mail in CA Forms are available here.</a><br>
+
+		<p>It costs $25 for a mail-in California form, while each county's form has its own cost. If you are homeless, you can fill out the following form for a fee waiver.
+			Please note that this form must be signed by a homeless service provider. This includes transitional housing providers. Catholic Charities, parole, and probation may also be able to provide signed fee waivers.
+		</p>
+
+		<a href="https://ccr.saccounty.net/Documents/AffidavitHomelessStatus.pdf" style="float: left;"><nobr> Waiver Forms are available here.</a><br>
 
 		<a href="search.html" style="float: left;"><nobr> Click here to search for locations in your county to obtain your birth certificate</a><br>
 
@@ -82,13 +84,14 @@
 		<p> If you are having trouble locating a Social Security Office, use this interactive map to find one near you!</p>
 
 
+		<p style="float: right;"><img src="../images/dl.png" height="250px" width="400px" ></p>
 
 		<h2>Step 3: Obtaining Your Cal-ID or Driver's License</h2>
 
-		<p> There are two routes you can take when obtaining your driver's license or ID card: 1) going online, or 2) going in person.
+		<p> There are two routes you can take when obtaining your driver's license or ID card: 1) going online, or 2) going in person. </br>
 			Below, you can find the details on whether you qualify for renewal online or if you need to go in person. </p>
 
-			<p> Note: You may NOT renew online if: </br>  1) you are not the person named on the renewal notice,
+			<p> Note: You may NOT renew online if: </br></br>  1) you are not the person named on the renewal notice,
 			</br> 2) you want to change your name, address, or gender identity, or</br>  3) you want to change from a standard DL/ID to a REAL ID, Reduced Fee DL/ID, No Fee DL/ID, Senior ID, or Commercial DL </p>
 
 			<figure class="wp-block-table"><table><thead><tr><th>Category</th><th>Situation</th><th>Customer Action</th></tr></thead><tbody><tr><td data-title="Category">Drivers 70+ – non-commercial</td><td data-title="Situation">Beginning December 6, 2020, eligible to renew online or by mail for expirations March 2020 through the COVID-19 pandemic.</td><td data-title="Customer Action">Complete online renewal or renew by mail</td></tr><tr><td data-title="Category"><br>Drivers 69 and under</td><td data-title="Situation">Expanded eligibility to renew onlineor by mail for licenses expiring during the emergency.</td><td data-title="Customer Action">Submit online renewal application or renew by mail</td></tr><tr><td data-title="Category">First Time REAL ID</td><td data-title="Situation">Requires office visit.</td><td data-title="Customer Action"> Complete <a href="/portal/driver-licenses-identification-cards/dl-id-online-app-edl-44/">online application</a><br> Upload documents<br> No appointment necessary<br> Bring documents to office visit</td></tr><tr><td data-title="Category">REAL ID Renewal</td><td data-title="Situation">Can be completed online.</td><td data-title="Customer Action">No office visit required</td></tr><tr><td data-title="Category">Limited-term REAL ID renewal</td><td data-title="Situation"></td><td data-title="Customer Action">Requires an office visit</td></tr><tr><td data-title="Category">Driver’s License<br>Permits</td><td data-title="Situation">All permits expiring March 1, 2020 through May 31, 2021 are extended for six months or to a date 24 months from the date of application, whichever is earlier.</td><td data-title="Customer Action">No action necessary</td></tr><tr><td data-title="Category">Commercial License</td><td data-title="Situation">All commercial driver’s licenses, endorsements and commercial learner’s permits expiring between March 2020-February 2021 have an extension valid through February 28, 2021.</td><td data-title="Customer Action"> No action necessary</td></tr></tbody></table></figure>
@@ -112,8 +115,11 @@
 			Below, you can find a list of the documents you need:</p>
 
 		<p> If you are having trouble locating a DMV, use this interactive map to find one near you!</p>
-		<iframe src="https://www.google.com/maps/d/embed?mid=1Mr74hecbSiZ0LRXFr_ngVsgLHtw" width="640" height="480"></iframe>
-
+		<iframe src="https://www.google.com/maps/d/embed?mid=1Mr74hecbSiZ0LRXFr_ngVsgLHtw" width="800" height="800"></iframe>
+		<br>
+		<br>
+		<br>
+		<br>
 
 </body>
 </html>
