--- a/html/map3.html
+++ b/html/map3.html
@@ -37,13 +37,10 @@
       ['Oakland Workforce Comprehensive One-Stop: 1212 Broadway, 3rd Floor Oakland, CA 94612 Phone: 510-768-4400', 37.80643844604492,-122.26982879638672 ,1],
       ['Orange County WIB One-Stop Satellite: 6281 Beach Blvd Suite 302 Buena Park, CA 90621 Phone: 714-562-9200', 33.87407684326172,-117.99832153320312,1],
       ['Pacific Gateway Career Transition Center: 3447 Atlantic Avenue, 1st Floor Long Beach, CA 90807 Phone: 562-570-WORK (9675)', 33.8225212097168,-118.18502044677734 ,1],
-      ['Richmond Works: 330 25th St. Richmond, CA 94804 Phone: 510-307-8014', , ,1],
-      ['', , ,1],
-      ['', , ,1],
-      ['', , ,1],
-      ['', , ,1],
-      ['', , ,1],
-      ['', , ,1],
+      ['Richmond Works: 330 25th St. Richmond, CA 94804 Phone: 510-307-8014', 37.9358149,-122.3452573 ,1],
+      ['Riverside County – Hemet: 1025 North State Street Hemet, CA 92543 Phone: 951-791-3500', 33.730798,-116.9716491 ,1],
+      ['Sacramento Works WIB Career Centers BROADWAY: 915 Broadway Sacramento, CA 95818 Phone: 916-324-6202', 38.56402587890625,-121.50123596191406 ,1],
+
       ['BROADWAY: 915 Broadway Sacramento, CA 95818. 916-324-6202', 38.5641564, -121.5016071,1],
       ['Workforce Investment: 1111 San Felipe Road Hollister, CA 95023. 831-637-9293', 36.8722399, -121.4008331,1],
       ['Training Agency (SBETA): 600 N. Arrowhead Avenue, Suite 300 San Bernardino, CA 92401. 909-888-7881', 34.11200714111328, -117.2896499633789,1],
