--- a/html/resources.html
+++ b/html/resources.html
@@ -81,7 +81,16 @@
 
 		<h2>Step 2: Obtaining Your Social Security Card</h2>
 
-		<p> If you are having trouble locating a Social Security Office, use this interactive map to find one near you!</p>
+		<p> If you are requesting a replacement social security card (because they have a number), then you can request it by mail (or online, if you have a state issued ID/DL and are not changing your name).
+			New social security cards must be obtained in person at your local Social Security Office. </br>
+
+			You must have the following items if when you go to the office: </br> </br>
+			• Proof of citizenship (birth certificate or passport) </br>
+			• Proof of age (religious record made before the age of 5 showing your date of birth, US hospital record of your birth, or passport) </br>
+			• Proof of identity (MediCal card, U.S. military ID, certificate of naturalization, health insurance card, certified copy of medical record, or student ID/record)
+		</p>
+
+			<p> If you are having trouble locating a Social Security Office, use this interactive map to find one near you! </p>
 
 
 		<p style="float: right;"><img src="../images/dl.png" height="250px" width="400px" ></p>
@@ -109,10 +118,13 @@
 
 		<h4>In Person</h4>
 
-		<!-- DMV Locations -->
-
 		<p>If you are renewing your ID in person, you will need to make sure you have the required documents.
-			Below, you can find a list of the documents you need:</p>
+			Below, you can find a list of the documents you need: </br></br>
+			• Proof of identity (birth certificate or passport)</br>
+			• 2 California residency documents</br>
+			• Proof of your SSN</br>
+			• If your name is changing, you must also have a proof of name change document
+		</p>
 
 		<p> If you are having trouble locating a DMV, use this interactive map to find one near you!</p>
 		<iframe src="https://www.google.com/maps/d/embed?mid=1Mr74hecbSiZ0LRXFr_ngVsgLHtw" width="800" height="800"></iframe>
